# c_datastructures

./: CMakeLists.txt  bst.c  bst.h  bst_test.h  main.c  rb_tree_test.h  rbbst.c  rbbst.h
implementations/: bst.c  min_heap.c  rbbst.c
interfaces/: min_heap.h
tests/: bst_test.h  min_heap_test.c  min_heap_test.h  rb_tree_test.h
